--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "langchain>=0.3.27",
+    "langchain-google-genai>=2.1.12",
     "python-dotenv>=1.1.1",
 ]
