--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,4 +15,13 @@ dependencies = [
     "langchain-openai>=0.3.33",
     "python-dotenv>=1.1.1",
     "yt-dlp>=2025.9.23",
+    "fastapi>=0.115.0",
+    "uvicorn>=0.30.6",
+    "pydantic>=2.9.0",
+    "mcp>=1.2.0",
+    "requests>=2.32.3",
 ]
+
+[project.scripts]
+agentic-api-run = "app.run:run"
+agentic-mcp = "mcp_server.server:run"
