--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "mcp>=1.2.0",
     "requests>=2.32.3",
     "pycryptodome>=3.23.0",
+    "googlesearch-python>=1.3.0",
 ]
 
 [project.scripts]
