fixed settings ui and add jiit web portal login component

--- a/extension/Extension/tsconfig.json
+++ b/extension/Extension/tsconfig.json
@@ -3,7 +3,11 @@
   "compilerOptions": {
     "allowImportingTsExtensions": true,
     "jsx": "react-jsx",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "./*"
+      ]
+    }
   }
-  }
-
-
+}
