--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "requests>=2.32.3",
     "pycryptodome>=3.23.0",
     "googlesearch-python>=1.3.0",
+    "langgraph>=1.0.1",
 ]
 
 [project.scripts]
