--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
     "yt-dlp>=2025.9.23",
     "fastapi>=0.115.0",
     "uvicorn>=0.30.6",
-    "pydantic>=2.9.0",
+    "pydantic[email]>=2.9.0",
     "mcp>=1.2.0",
     "requests>=2.32.3",
     "pycryptodome>=3.23.0",
