--- a/extension/Extension/package.json
+++ b/extension/Extension/package.json
@@ -19,9 +19,13 @@
     "@radix-ui/react-select": "^2.2.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "katex": "^0.16.27",
     "lucide-react": "^0.553.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-markdown": "^10.1.0",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.4.0",
     "tw-animate-css": "^1.4.0"
