--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "pycryptodome>=3.23.0",
     "googlesearch-python>=1.3.0",
     "langgraph>=1.0.1",
+    "langchain-tavily>=0.2.14",
 ]
 
 [project.scripts]
