--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "googlesearch-python>=1.3.0",
     "langgraph>=1.0.1",
     "langchain-tavily>=0.2.14",
+    "faster-whisper>=1.2.1",
 ]
 
 [project.scripts]
