--- a/extension/requirements.txt
+++ b/extension/requirements.txt
@@ -1,33 +1,5 @@
-# Flask Web Framework
-flask
-flask-cors
-
-# Environment Variables
-python-dotenv
-
-# HTTP Requests
-requests
-
-# Google Generative AI (Gemini)
-google-generativeai
-
-# LangChain Core Components
-langchain
-langchain-core
-langchain-community
-
-# LangChain Integrations
-langchain-groq
-faiss-cpu
-langchain-ollama
-
-# Text Processing
-langchain-text-splitters
-
-# Vector Database
-
-# Additional Dependencies (auto-installed with above packages but listed for clarity)
-# - pydantic
-# - numpy
-# - typing-extensions
-# - dataclasses-json
+flask==3.0.0
+flask-cors==4.0.0
+requests==2.31.0
+python-dotenv==1.0.0
+google-generativeai==0.3.2
