--- a/extension/.gitignore
+++ b/extension/.gitignore
@@ -1,69 +1,26 @@
-# Node / JavaScript
-node_modules/
-dist/
-build/
-out/
-.cache/
-.parcel-cache/
-.next/
-.nuxt/
-.vite/
-.eslintcache
-.cache-loader
-/.pnp
-.pnp.js
-
-# TypeScript / Compilation
-tmp/
-temp/
-
-# Packaging
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+lerna-debug.log*
 
-# Coverage / Test
-coverage/
-.nyc_output/
-jest.cache
+node_modules
+.output
+stats.html
+stats-*.json
+.wxt
+web-ext.config.ts
 
-# IDEs / Editors
-.vscode/
-.idea/
-*.sublime-workspace
-*.sublime-project
-
-# OS files
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
-Thumbs.db
-
-# Local env / secrets
-.env
-.env.local
-.env.*.local
-.credentials
-
-# Misc
-logs/
-*.log
-tmp/
-cache/
-.history/
-./venv
-# Explicit .env file exclusions
-**/.env
-Extension/.env
-himanshu/.env
-himanshu/agents/.env
-
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-venv/
-ENV/
-env/
-.venv
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
